# port-interface-comm

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  port_analyzer.py  port_converter.py
.claude/commands/: migrate-port.md  migrate-scan.md  migrate-wiring.md
EgiCmpExtPkg/: CMakeLists.txt  EgiVorExtDataIfc.h
EgiCmpExtPkg/inc/: Ans611ControlDataType.h  Ans611ControlIfc.h
EgiCmpPkg/: CMakeLists.txt
EgiCmpPkg/inc/: EgiCmpCls.h  EgiFormatterCls.h
EgiCmpPkg/src/: EgiCmpCls.cpp  EgiFormatterCls.cpp
EgiCmpPkg/tests/: CMakeLists.txt
EgiMgrExtPkg/: CMakeLists.txt  EgiCommandIfc.h  EgiCommandType.h  EgiExtDataIfc.h  EgiExtDataType.h
EgiMgrExtPkg/tests/: CMakeLists.txt  test_EgiExtDataType.cpp
EgiMgrPkg/: CMakeLists.txt
EgiMgrPkg/inc/: EgiLruMgrCls.h  EgiMgrCls.h  EgiModControllerCls.h
EgiMgrPkg/src/: EgiLruMgrCls.cpp  EgiMgrCls.cpp  EgiModControllerCls.cpp
EgiMgrPkg/tests/: CMakeLists.txt
PartitionPkg/: CMakeLists.txt
PartitionPkg/inc/: PartitionCls.h
PartitionPkg/src/: PartitionCls.cpp
PartitionPkg/tests/: CMakeLists.txt  test_PartitionCls.cpp
RadaltMgrExtPkg/: CMakeLists.txt  RadaltExtDataIfc.h  RadaltExtDataType.h
RadaltMgrExtPkg/inc/: RadaltExtDataIfc.h  RadaltExtDataType.h
RadaltMgrPkg/: CMakeLists.txt
RadaltMgrPkg/inc/: PortMacros.h  RadaltLruMgrCls.h  RadaltMgrCls.h
RadaltMgrPkg/src/: RadaltLruMgrCls.cpp  RadaltMgrCls.cpp
RadaltMgrPkg/tests/: CMakeLists.txt  test_RadaltMgrCls.cpp
VorIlsMgrPkg/: CMakeLists.txt
VorIlsMgrPkg/inc/: VorIlsLruMgrCls.h  VorIlsMgrCls.h
VorIlsMgrPkg/src/: VorIlsLruMgrCls.cpp  VorIlsMgrCls.cpp
cmake/: toolchain-target.cmake.example
docs/: MIGRATION_GUIDE.md  PORT_INTERFACE_GUIDE.md
docs/plans/: 2026-01-27-port-analyzer-design.md  2026-01-27-port-analyzer-implementation.md  2026-01-31-cmake-conversion.md
tests/: CMakeLists.txt  test_EgiCmpCls.cpp  test_EgiLruMgrCls.cpp  test_EgiMgrCls.cpp  test_Integration.cpp  test_RadaltLruMgrCls.cpp  test_RadaltMgrCls.cpp
tools/: port_analyzer.py  requirements.txt
tools/test_fixtures/EgiMgrExtPkg/: EgiExtDataIfc.h  EgiExtDataType.h
tools/test_fixtures/EgiMgrPkg/inc/: EgiLruMgrCls.h  EgiMgrCls.h
tools/test_fixtures/EgiMgrPkg/src/: EgiMgrCls.cpp
tools/test_fixtures/PartitionPkg/inc/: PartitionCls.h
tools/test_fixtures/PartitionPkg/src/: PartitionCls.cpp
tools/test_fixtures/RadaltMgrPkg/inc/: RadaltLruMgrCls.h  RadaltMgrCls.h
tools/test_fixtures/RadaltMgrPkg/src/: RadaltMgrCls.cpp
